--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
 
 
     <ImageView
-        android:id="@+id/iv_circle"
+        android:id="@+id/iv_image1"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/circle"
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_image2"
         android:layout_width="260dp"
         android:layout_height="260dp"
         android:layout_marginTop="-180dp"
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/pink1" />
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/iv_image3"
         android:layout_width="260dp"
         android:layout_height="260dp"
         android:src="@drawable/circle"
@@ -43,7 +43,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/iv_image4"
         android:layout_width="320dp"
         android:layout_height="320dp"
         android:layout_marginBottom="-240dp"
@@ -69,6 +69,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <ImageView
+        android:id="@+id/logouthome"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/logout"
@@ -94,11 +95,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
@@ -126,6 +127,27 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_privacyPolicy"
+        android:layout_width="90dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="4dp"
+        android:text="privacy Policy"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@+id/iv_image1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_termsConditions"
+        android:layout_width="100dp"
+        android:layout_height="69dp"
+        android:text="terms Conditions"
+        android:textSize="9sp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_image2"
+        app:layout_constraintStart_toEndOf="@+id/btn_privacyPolicy"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
