--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/iv_circle"
+        android:id="@+id/iv_image1"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/circle"
@@ -59,7 +59,7 @@
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_circle"
+        app:layout_constraintTop_toBottomOf="@id/iv_image1"
         />
 
 
